compiler/test-data/parser/scheme/errors/empty_scheme.frel
module scheme.errors.empty_scheme

scheme Empty { }
